--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
-title: John Doe # your name (or website title) here
+title: Manoj Kumar # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Hello Everyone!
   <br><br>
-  Second description 
+  I am Manoj Kumar
+  (Master's in Operational Research, University of Delhi)
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/iam-manoj/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
