--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   (Master's in Operational Research, University of Delhi)
   <br><br>
   <a href="https://www.linkedin.com/in/iam-manoj/">View My LinkedIn Profile</a> 
+  <a href="https://www.hackerrank.com/iam010/">View My Hackerrank Profile</a> 
+  <a href="https://www.freecodecamp.org/iam-manoj/">View My freecodecamp Profile</a> 
+  
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
